--- a/sumthis.ai/index.html
+++ b/sumthis.ai/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/finfit.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SumThis.ai</title>
+    <title>SumThis.ai - Shorten Texts with AI</title>
   </head>
   <body>
     <div id="root"></div>
